--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "babel-loader": "^8.0.5",
     "babel-preset-es2015": "^6.24.1",
     "css-loader": "^2.1.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
+    "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.3",
